==> Moddable-OpenSource/moddable/xs/platforms/zephyr/xsHost.c <==
#include <setjmp.h>
#include "xsAll.h"
#include "xs.h"
#include "xsScript.h"
#include "xsPlatform.h"
#include "xsHosts.h"
#include "mc.defines.h"
#include <stdio.h>
	#include "modTimer.h"
	#include "modInstrumentation.h"
	#define INSTRUMENT_CPULOAD 0		//@@ zephyr
	#define kTargetCPUCount 1
	#define espInstrumentCount kModInstrumentationSlotHeapSize - kModInstrumentationPixelsDrawn

int modMessagePostToMachine(xsMachine *the, uint8_t *message, uint16_t messageLength, modMessageDeliver callback, void *refcon)
{
	modMessageRecord msg;

#ifdef mxDebug
	if (0xffff == messageLength) {
		msg.message = NULL;
		msg.callback = callback;
		msg.refcon = refcon;
		msg.length = 0;
		return k_msgq_put(&the->msgQueue, &msg, MODDEF_TASK_QUEUEWAIT);		//@@ separate queue for debug msgs
	}
#endif

	msg.embeddedMessage = 0;
	if (message && messageLength) {
		if (messageLength <= sizeof(msg.message)) {
			msg.embeddedMessage = 1;
			c_memmove(&msg.message, message, messageLength);
		}
		else {
			msg.message = c_malloc(messageLength);
			if (!msg.message) return -1;

			c_memmove(msg.message, message, messageLength);
		}
	}
	else
		msg.message = NULL;

	msg.length = messageLength;
	msg.callback = callback;
	msg.refcon = refcon;

	if (0 == k_msgq_put(&the->msgQueue, &msg, MODDEF_TASK_QUEUEWAIT))
		return 0;

	if (msg.message && !msg.embeddedMessage)
		c_free(msg.message);

	return -2;
}

int modMessagePostToMachineFromISR(xsMachine *the, modMessageDeliver callback, void *refcon)
{
	modMessageRecord msg;

	msg.message = NULL;
	msg.length = 0;
	msg.callback = callback;
	msg.refcon = refcon;
	msg.embeddedMessage = 0;

	k_msgq_put(&the->msgQueue, &msg, K_NO_WAIT);

	return 0;
}

void modMessageService(xsMachine *the, int maxDelayMS)
{
	modMessageRecord msg;
	uint32_t startTime = modMilliseconds();
	uint32_t maxDuration = (uint32_t)maxDelayMS;
	uint32_t count;
	int err;

	count = k_msgq_num_used_get(&the->msgQueue);
	if (!count) count = 1;

#if !mxDebug
	modWatchDogReset();
#endif

	do {
		err = k_msgq_get(&the->msgQueue, &msg, Z_TIMEOUT_MS(maxDelayMS));
		if (0 == err) {
			if (msg.embeddedMessage)
				(msg.callback)(the, msg.refcon, (uint8_t *)&msg.message, msg.length);
			else {
				(msg.callback)(the, msg.refcon, msg.message, msg.length);
				if (msg.message)
					c_free(msg.message);
			}
		}

		if (!--count)
			break;
		maxDelayMS = 0;
	} while ((modMilliseconds() - startTime) < maxDuration);

	modWatchDogReset();
}

static txBoolean spiWrite(void *dst, size_t offset, void *buffer, size_t size)
{
	offset += (uintptr_t)dst;

	if ((offset + size) > (uintptr_t)kModulesEnd)
		return 0;		// attempted write beyond end of available space

	// depends on fxMapArchive writng one sector at a time
	if (!(offset & (gModFlashBlockSize - 1))) {		// offset at start of a sector, erase sector
		if (!modSPIErase(offset - (uintptr_t)gPartitionAddress, gModFlashBlockSize))
			return 0;
	}

	return modSPIWrite(offset - (uintptr_t)gPartitionAddress, size, buffer);
}

void *modInstallMods(xsMachine *the, void *preparationIn, uint8_t *status)
{
	if (!modSPIFlashInit() || (0 == gModFlashBlockSize))
		return 0;

	txPreparation *preparation = preparationIn;
	void *result = NULL;
	if (fxMapArchive(the, preparation, (void *)kModulesStart, gModFlashBlockSize, spiRead, spiWrite)) {
		result = (void *)kModulesStart;
		fxSetArchive(the, result);
	}

	if (XS_ATOM_ERROR == c_read32be((void *)(4 + kModulesStart)))
		*status = *(8 + (uint8_t *)kModulesStart);
	else
		*status = 0;

	return result;
}

uint8_t modSPIRead(uint32_t offset, uint32_t size, uint8_t *dst)
{
	if (!modSPIFlashInit())
		return 0;

	if (flash_area_read(gModFlashArea, offset, dst, size) < 0)
		return 0;
	
	return 1;
}

uint8_t modSPIWrite(uint32_t offset, uint32_t size, const uint8_t *src)
{
	if (!modSPIFlashInit())
		return 0;

	size = (size + gModWriteAlign - 1) & ~(gModWriteAlign - 1);		// ugly hack, but works for mods. the alternative is to make all writers aware of gModWriteAlign

	if (flash_area_write(gModFlashArea, offset, src, size) < 0)
		return 0;

	return 1;
}

uint8_t modSPIErase(uint32_t offset, uint32_t size)
{
	if (!modSPIFlashInit())
		return 0;

	if (flash_area_erase(gModFlashArea, offset, size) < 0)
		return 0;

	return 1;
}

void modGetTimeOfDay(struct modTimeVal *tv, struct modTimeZone *tz)
{
	struct timespec ts;

	sys_clock_gettime(SYS_CLOCK_REALTIME, &ts);

	if (tv) {
		tv->tv_sec = ts.tv_sec;
		tv->tv_usec = ts.tv_nsec / 1000;
	}
	if (tz) {
//		tz->tz_minuteswest = gTimeZoneOffset;
//		tz->tz_dsttime = gDaylightSavings;
	}
}

void modSetTime(uint32_t seconds)
{
	//@@ untested?
	struct timespec ts = { .tv_sec = seconds };
	sys_clock_settime(SYS_CLOCK_REALTIME, &ts);
}
