==> Moddable-OpenSource/moddable/xs/platforms/pico/xsHost.c <==
#include "xsAll.h"
#include "xs.h"
#include "xsScript.h"
#include "xsPlatform.h"
#include "mc.defines.h"
#include "xsHosts.h"
#include <stdio.h>
#include "hardware/sync.h"
#include "pico/cyw43_arch.h"
	#include "modTimer.h"
	#include "modInstrumentation.h"
	#define espInstrumentCount kModInstrumentationSlotHeapSize - kModInstrumentationPixelsDrawn

void modGetTimeOfDay(struct modTimeVal *tv, struct modTimeZone *tz)
{
	modTime_t theTime;
	uint32_t ms;

	ms = pico_milliseconds();
	theTime = (ms / 1000) + gTimeOfDayOffset;

	if (tv) {
		tv->tv_sec = theTime;
		tv->tv_usec = (ms % 1000) * 1000;
	}
	if (tz) {
//		tz->tz_minuteswest = gTimeZoneOffset;
//		tz->tz_dsttime = gDaylightSavings;
	}
}

void modSetTime(uint32_t seconds)
{
	uint32_t ms;
	ms = pico_milliseconds();

	gTimeOfDayOffset = seconds - (ms / 1000);
}

int modMessagePostToMachine(xsMachine *the, uint8_t *message, uint16_t messageLength, modMessageDeliver callback, void *refcon)
{
#ifdef mxDebug
	if (0xffff == messageLength)
		messageLength = 0;
#endif

	modMessage msg = c_malloc(sizeof(modMessageRecord) + messageLength);
	if (!msg) return -1;

	msg->the = the;
	msg->callback = callback;
	msg->refcon = refcon;
	msg->isStatic = 0;

	if (message && messageLength)
		c_memmove(msg->message, message, messageLength);
	msg->length = messageLength;

	modCriticalSectionBegin();
	appendMessage(msg);
	modCriticalSectionEnd();

	return 0;
}

int modMessagePostToMachineFromISR(xsMachine *the, modMessageDeliver callback, void *refcon)
{
	modMessage msg;
	uint8_t i;

	for (i = 0, msg = gMessagePool; i < kMessagePoolCount; i++, msg++) {
		if (!msg->isStatic) {
			msg->isStatic = 1;
			break;
		}
	}

	if ((gMessagePool + kMessagePoolCount) == msg) {
//		modLog("message pool full");
		return -1;
	}

	msg->the = the;	
	msg->callback = callback;
	msg->refcon = refcon;
	msg->length = 0;

	appendMessage(msg);

	return 0;
}

int modMessageService(xsMachine *the, int maxDelayMS)
{
	absolute_time_t until = make_timeout_time_ms(maxDelayMS);

	modCriticalSectionDeclare;
	modCriticalSectionBegin();
	modMessage msg = gMessageQueue;
	while (msg) {
		msg->marked = 1;
		msg = msg->next;
	}
	modCriticalSectionEnd();

	modWatchDogReset();

	msg = gMessageQueue;
	while (msg && msg->marked) {
		modMessage next;

//		if (msg->callback && (!msg->the || (msg->the == the)))
		if (msg->callback)			// like esp
			(msg->callback)(msg->the, msg->refcon, msg->message, msg->length);

		modCriticalSectionBegin();
		next = msg->next;
		gMessageQueue = next;
		modCriticalSectionEnd();

		if (msg->isStatic)
			msg->isStatic = 0;		// return to pool
		else
			c_free(msg);
		msg = next;
	}

#if 1
	// workaround for best_effort_wfe_or_timeout hanging on small/zero/negative timeouts
	while (!gMessageQueue) {
		absolute_time_t now = make_timeout_time_ms(0);
		if (absolute_time_diff_us(until, now) < 1000)
			break;

		if (best_effort_wfe_or_timeout(until))
			break;
		tight_loop_contents();
	}
#else
	while (!gMessageQueue && !best_effort_wfe_or_timeout(until))
		;
#endif

	return gMessageQueue ? 1 : 0;
}

static txBoolean spiWrite(void *dst, size_t offset, void *buffer, size_t size)
{
	offset += (uintptr_t)dst;

	if ((offset + kFlashSectorSize) > (uintptr_t)kModulesEnd)
		return 0;		// attempted write beyond end of available space

	if (!(offset & (kFlashSectorSize - 1))) {		// if offset is at start of a sector, erase that sector
		if (!modSPIErase(offset - (uintptr_t)kFlashStart, kFlashSectorSize))
			return 0;
	}

	return modSPIWrite(offset - (uintptr_t)kFlashStart, size, buffer);
}

void *modInstallMods(void *preparationIn, uint8_t *status)
{
	txPreparation *preparation = preparationIn;
	void *result = NULL;

	if (fxMapArchive(preparation, (void *)kModulesStart, (void *)kModulesStart, kFlashSectorSize, spiRead, spiWrite))
		result = (void *)kModulesStart;

	if (XS_ATOM_ERROR == c_read32be(4 + kModulesStart)) {
		*status = *(8 + (uint8_t *)kModulesStart);
		modLog("mod failed");
	}
	else
		*status = 0;

	return result;
}

uint8_t modSPIRead(uint32_t offset, uint32_t size, uint8_t *dst)
{
	c_memcpy(dst, (void *)(offset + kFlashStart), size);
	return 1;
}

uint8_t modSPIWrite(uint32_t offset, uint32_t size, const uint8_t *src)
{
	uint8_t temp[512] __attribute__ ((aligned (4)));
	uint32_t toAlign;

	if (!modSPIFlashInit()) {
		return 0;
	}

	if (offset & 255) {		// long align offset
		toAlign = 256 - (offset & 255);
		c_memset(temp, 0xFF, 256);
		c_memcpy(temp + 256 - toAlign, src, (size < toAlign) ? size : toAlign);

		uint32_t status = save_and_disable_interrupts();
		flash_range_program(offset & ~255, temp, 256);
		restore_interrupts(status);

		if (size <= toAlign) {
			return 1;
		}

		src += toAlign;
		offset += toAlign;
		size -= toAlign;
	}

	toAlign = size & ~255;
	if (toAlign) {
		size -= toAlign;
		if (255 & (uintptr_t)src) {	// src is not long aligned, copy through stack
			while (toAlign) {
				uint32_t use = (toAlign > sizeof(temp)) ? sizeof(temp) : toAlign;
				c_memcpy(temp, src, use);
				uint32_t status = save_and_disable_interrupts();
				flash_range_program(offset, temp, use);
				restore_interrupts(status);

				toAlign -= use;
				src += use;
				offset += use;
			}
		}
		else {
			uint32_t status = save_and_disable_interrupts();
			flash_range_program(offset, src, toAlign);
			restore_interrupts(status);

			src += toAlign;
			offset += toAlign;
		}
	}

	if (size) {			// long align tail
		c_memset(temp, 0xFF, 256);
		c_memcpy(temp, src, size);
		uint32_t status = save_and_disable_interrupts();
		flash_range_program(offset, temp, 256);
		restore_interrupts(status);
	}

	return 1;
}

uint8_t modSPIErase(uint32_t offset, uint32_t size)
{
	if (!modSPIFlashInit()) {
		return 0;
	}

	if ((offset & (FLASH_SECTOR_SIZE -1)) || (size & (FLASH_SECTOR_SIZE -1))) {
		return 0;
	}

	uint32_t status = save_and_disable_interrupts();
	flash_range_erase(offset, size);
	restore_interrupts(status);
	return 1;
}
